--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -502,9 +502,6 @@
     <ClInclude Include="..\public\BossMovie.h">
       <Filter>04.UI\BossMovie</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\Equipment.h">
-      <Filter>02.GameObjects\Character\Equip\Weapon</Filter>
-    </ClInclude>
     <ClInclude Include="..\Public\Dustparticle_Cone.h">
       <Filter>05.Effect\Ursa\Pummel_foot</Filter>
     </ClInclude>
@@ -522,6 +519,9 @@
     </ClInclude>
     <ClInclude Include="..\Public\ItemBox.h">
       <Filter>02.GameObjects\Item</Filter>
+    </ClInclude>
+    <ClInclude Include="..\public\Equipment.h">
+      <Filter>02.GameObjects\Character\Equip</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
