--- a/Assets/Scenes/Dungeon1_JunT.yaml
+++ b/Assets/Scenes/Dungeon1_JunT.yaml
@@ -1,26 +1,5 @@
 Scene: Untitled
 GameObjects:
-  - Name: Direction
-    UUID: 14881628268781159922
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Object
-    PassIndex: 0
-    NumOBB: 0
-    Com_Transform:
-      Translation: [7.21600008, 30.2380009, -10.7989998]
-      Rotation: [42.2999382, -51.9998665, -4.09997034]
-      Scale: [0.999966085, 0.999988437, 0.999958873]
-    Com_Light:
-      Type: 0
-      Range: 10
-      Angle: 20
-      Diffuse: [0.268115938, 0.268115938, 0.268115938, 1]
-      Ambient: [0.557971001, 0.55797112, 1, 1]
-      Specular: [1, 1, 1, 1]
-    RenderGroup: 1
-    FrustumRange: 1
   - Name: Roof
     UUID: 12439306000784340327
     Active: true
@@ -40,22 +19,43 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 500
-  - Name: DecoFloor
-    UUID: 1361245669408703193
+  - Name: Empty Object
+    UUID: 14384461297651788918
     Active: true
     Layer: Default
-    Instancing: true
+    Instancing: false
     Type: Object
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0.129999995, -1.02199996, -4.74100018]
-      Rotation: [0, 1.99999964, 0]
-      Scale: [1.63300002, 1.26800013, 0.837000072]
+      Translation: [-3.83586812, 6.17628098, -18.1791477]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Light:
+      Type: 0
+      Range: 10
+      Angle: 20
+      Diffuse: [0.123188376, 0.123188376, 0.123188376, 1]
+      Ambient: [1, 1, 1, 1]
+      Specular: [1, 1, 1, 1]
+    RenderGroup: 1
+    FrustumRange: 1
+  - Name: Empty Object
+    UUID: 10973444193148373002
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, -2.62342072, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
     Com_Collider:
-      Center: [0, 0, 0]
+      Center: [0, 1, 0]
       Type: Box
-      Size: [4, 1.39999998, 3]
+      Size: [6, 2.0999999, 7]
       Angle:
         - 0
         - 0
@@ -66,53 +66,9 @@ GameObjects:
         Kinematic: false
         CharacterController: false
     Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Map\
-      MeshFileName: sagak.fbx
-      HasCollider: true
+      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon2\BADAK\
+      MeshFileName: badack.fbx
+      HasCollider: false
       Equipment: false
-    Translation: [0.129999995, -1.02199996, -4.74100018]
-    Rotation: [0, 1.99999964, 0]
-    Scale: [1.63300002, 1.26800013, 0.837000072]
-    MeshFilePath: ..\..\Assets\Meshes\Map\
-    MeshFileName: sagak.fbx
-    HasCollider: true
     RenderGroup: 1
-    FrustumRange: 50
-  - Name: Empty Object
-    UUID: 7197030116508455854
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0, -3.55413508]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_Decal:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\020.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_SmokeMask_003_TEX_KKJ.png
-      TextureNoisePath: ""
-      TextureNormalPath: ..\..\Assets\Textures\Effect\Normal\Test.dds
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 2
-      FadeOutStratTime: 1
-      FadeIn: true
-      FadeInDuration: 1
-      FadeInStratTime: 0
-      EffectDuration: 2
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0.200000003]
+    FrustumRange: 1
