--- a/Assets/Scenes/CityMap.yaml
+++ b/Assets/Scenes/CityMap.yaml
@@ -3585,7 +3585,7 @@ GameObjects:
     Com_Transform:
       Translation: [13.6733255, 1.42076266, 26.1672058]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3623,7 +3623,7 @@ GameObjects:
     Com_Transform:
       Translation: [9.91244888, 1.4114182, 25.4054718]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3661,7 +3661,7 @@ GameObjects:
     Com_Transform:
       Translation: [17.907465, 1.77923751, 28.5297012]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3699,7 +3699,7 @@ GameObjects:
     Com_Transform:
       Translation: [17.9069138, 1.66635501, 30.6703758]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3737,7 +3737,7 @@ GameObjects:
     Com_Transform:
       Translation: [14.3152466, 1.43982267, 32.5379982]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3775,7 +3775,7 @@ GameObjects:
     Com_Transform:
       Translation: [15.0096769, 2.6880579, 26.3946095]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3813,7 +3813,7 @@ GameObjects:
     Com_Transform:
       Translation: [8.44896984, 2.89404273, 25.3545856]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3851,7 +3851,7 @@ GameObjects:
     Com_Transform:
       Translation: [4.03379488, 3.16763735, 24.9382153]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3889,7 +3889,7 @@ GameObjects:
     Com_Transform:
       Translation: [7.21364594, 2.08549118, 34.0770912]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3927,7 +3927,7 @@ GameObjects:
     Com_Transform:
       Translation: [0.742036283, 2.05363965, 34.0629387]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -3965,7 +3965,7 @@ GameObjects:
     Com_Transform:
       Translation: [-8, 0.0687308013, 32.2857704]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256768018, 0.426470071, 1.16933429]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -4003,7 +4003,7 @@ GameObjects:
     Com_Transform:
       Translation: [-0.0814654827, 2.98774052, 24.7634621]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -4041,7 +4041,7 @@ GameObjects:
     Com_Transform:
       Translation: [-1.67324996, 0.628196776, 27.0857754]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -4079,7 +4079,7 @@ GameObjects:
     Com_Transform:
       Translation: [-5.67864418, 0.304818839, 27.671936]
       Rotation: [-176.044357, -79.6484985, -179.999985]
-      Scale: [0.256682724, 0.425532848, 1.17747533]
+      Scale: [0.25, 0.42, 1.2]
     Com_VIBuffer:
       {}
     Effect_Setting:
