--- a/Assets/Scenes/InventoryUI.yaml
+++ b/Assets/Scenes/InventoryUI.yaml
@@ -205,7 +205,7 @@ GameObjects:
       Color: [0, 0, 0, 1]
       Sprite: [0.100000001, 0, 0, 0]
     Com_Text:
-      Text: Shoose
+      Text: Shoes
       Color: [1, 1, 1, 1]
       Scale: [1, 1]
       LayerDepth: 0
@@ -485,7 +485,7 @@ GameObjects:
       Color: [0, 0, 0, 1]
       Sprite: [0.100000001, 0, 0, 0]
     Com_Text:
-      Text: "     Eqiup"
+      Text: "     Equip"
       Color: [1, 1, 1, 1]
       Scale: [1, 1]
       LayerDepth: 0
